# github-user-activity

./: .gitignore  README.md  events.json  payload_events.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yaml  cicd.yaml
src/: api.py  config.py  custom_errors.py  event_strategy.py  main.py  operations.py
tests/: conftest.py  test_api.py  test_event_strategy.py  test_operations.py
